[gd_scene load_steps=6 format=3 uid="uid://cigo3lwqgxxmw"]

[ext_resource type="Script" path="res://Oar.gd" id="1_me7ow"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fbnqy"]
height = 1.5
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s6ono"]
albedo_color = Color(0.439216, 0.243137, 0.027451, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_6sxre"]
material = SubResource("StandardMaterial3D_s6ono")

[sub_resource type="SphereShape3D" id="SphereShape3D_6fqlq"]
radius = 1.176

[node name="OarMain" type="Node3D"]
script = ExtResource("1_me7ow")

[node name="RigidBody" type="RigidBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 2
lock_rotation = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody"]
shape = SubResource("CylinderShape3D_fbnqy")

[node name="Oar" type="MeshInstance3D" parent="RigidBody"]
transform = Transform3D(0.542425, 0, 0, 0, 0.766167, 0, 0, 0, 0.540036, 0, 0, 0)
mesh = SubResource("CylinderMesh_6sxre")
skeleton = NodePath("../..")

[node name="Area3D" type="Area3D" parent="RigidBody"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody/Area3D"]
shape = SubResource("SphereShape3D_6fqlq")

[connection signal="body_entered" from="RigidBody/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="RigidBody/Area3D" to="." method="_on_area_3d_body_exited"]
